# NeMo-Retriever

./: .cursorignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.md  CONTRIBUTING.md  Dockerfile  README.md  agentic_retriever.ipynb  docker-compose.a100-40gb.yaml  docker-compose.l40s.yaml  docker-compose.yaml  retriever-service.log.1  retriever-service.log.3  skill_eval.yaml  test_greptile_review.md  test_remote_inference.ipynb  versions.json
.agents/skills/: nemo-retriever-service  nemo-retriever-setup
.claude/skills/: nemo-retriever-evaluate  nemo-retriever-ingest  nemo-retriever-query
.codex/: config.toml.example
.cursor/rules/: nrl-26.05-release-docs.mdc  nrl-extraction-doc-bugs.mdc
.github/: PULL_REQUEST_TEMPLATE.md  nrlbuild-work-summary.md
.github/ISSUE_TEMPLATE/: bug_report_form.yml
.github/PULL_REQUEST_TEMPLATE/: doc_bug_fix.md
.github/workflows/: build-docs.yml  ci-main.yml  ci-pull-request.yml  docker-build-arm.yml  docker-build.yml  docker-nightly-publish.yml  docs-deploy.yml  huggingface-nightly.yml  integration-test-library-mode.yml  nrl-docs-github-pages.yml  nrl-docs-nvidia-publish.yml  (+10 more)
.greptile/: config.json  files.json  rules.md
26.1.3/: sitemap.xml
26.3.0/: 404.html  index.html  sitemap.xml
26.5.0/: 404.html  index.html  objects.inv  sitemap.xml
agent_eval/: README.md  build_report.py  extract_queries.py  functional_eval_plan.md  functional_findings.md  functional_uc_mapping.md  leakage_all_batches.json  leakage_all_batches.md  leakage_batch4.json  leakage_batch4.md  profiles.py  prompt.py  queries.json  results_corpus_level_batch4.md  run_agent_eval.py  schema.py  smoke_queries.json
client/: pyproject.toml
config/: custom_summarization_pipeline.yaml  default_pipeline.yaml
data/: jp20_query_gt.csv
deploy/: pdf-blueprint.ipynb
docs/: Makefile  README.md  mkdocs.nrl-github-pages.yml  mkdocs.yml
evaluation/: bo767_recall.ipynb  bo767_recall.md
examples/: README.md  building_vdb_operator.ipynb  lancedb_vdb_operator.ipynb  langchain_multimodal_rag.ipynb  llama_index_multimodal_rag.ipynb  nemo_retriever_query_filter_sidecar.csv  nemo_retriever_retriever_query_metadata_filter.ipynb
gpu_pdf_extractor/: .gitignore  ANALYSIS.md  FINDINGS_REPORT.md  P1_RESULTS.md  P2_RESULTS.md  P3prime_RESULTS.md  PHASE0_RESULTS.md  VIABILITY_PLAN.md  profile_areas.py
gpu_pdf_extractor/native/: CMakeLists.txt  README.md  pyproject.toml
gpu_pdf_extractor/native/src/: cuda_kernel.cu  gpu_pdfium_ext.cpp  pdf_bindings.cpp  raster_kernels.cu
helm/: README.md  README.md.gotmpl  values.yaml
latest/: 404.html  index.html  sitemap.xml
nemo_retriever/: Dockerfile  README.md  docker.md  embedding_stage_config.yaml  pyproject.toml  recall_analysis.py
retrieval-bench/: pyproject.toml
scripts/: init_nemotron_ocr_v2.py
src/: pyproject.toml
(+2519 files in other folders)
